<resources>

    <string name="app_name">My Application</string>
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>

    <!-- Change BOTH strings as required -->
    <string name="back4app_app_id">I0QShVQg2doN1pcXns0pA7xG6Eop3P56brU1jASW</string>
    <string name="back4app_client_key">HRTIMlT7aCWFvkl9SkPhPdAclgXPJtafLrnFqR13</string>


    <string name="add_point">Add Point Lon-Lat</string>

    <string name="longitud">Longitud</string>
    <string name="latitud">Latitud</string>
    <string name="kmTotales">Total km </string>

    <string name="edit_point_name">Enter Point Name</string>
    <string name="button_change_name">Change Point Name</string>

    <string name="addlatitud_message">Add Latitud</string>
    <string name="addlongitud_message">Add Longitud</string>
    <string name="addkmTotales_message">Add Total km</string>
    <string name="duracionEnMinutos_message">Add Total time in minutes</string>
    <string name="clima_message">Add climate</string>
    <string name="button_add_location">Create Location</string>


    <string name="title_activity_display">DisplayActivity</string>
    <string name="title_activity_addPoint">AddPointActivity</string>
    <string name="action_new">New Position</string>
    <string name="action_get">Update Positions</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="next">Next</string>
    <string name="previous">Previous</string>

</resources>