<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" 
    android:id="@+id/activity_addpoint">




    <TextView
        android:id="@+id/textViewDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_point" />

    <EditText
        android:id="@+id/edit_latitud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="58dp"
        android:ems="10"
        android:hint="@string/addlatitud_message" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/edit_longitud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/edit_latitud"
        android:layout_marginTop="13dp"
        android:ems="10"
        android:hint="@string/addlongitud_message">

    </EditText>

    <EditText
        android:id="@+id/edit_kmTotales"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_longitud"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="-1dp"
        android:layout_marginLeft="-1dp"
        android:layout_marginTop="13dp"
        android:ems="10"
        android:hint="@string/addkmTotales_message">

    </EditText>

    <EditText
        android:id="@+id/edit_duracionEnMinutos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_kmTotales"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="-2dp"
        android:layout_marginLeft="-2dp"
        android:layout_marginTop="13dp"
        android:ems="10"
        android:hint="@string/duracionEnMinutos_message">

    </EditText>

    <EditText
        android:id="@+id/edit_clima"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_duracionEnMinutos"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="-2dp"
        android:layout_marginLeft="-2dp"
        android:layout_marginTop="13dp"
        android:ems="10"
        android:hint="@string/clima_message">

    </EditText>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="667dp"
        android:layout_marginRight="11dp"
        android:onClick="saveLocation"
        android:text="@string/button_add_location" />

</RelativeLayout>
